# SpectralImager3D

./: CMakeLists.txt  README.md
Source/: JuceHeader.h  OpenGLRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedDataManager.h  SpectralAnalyzer.h
